# dynamodb-lock-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs
src/tests/: mock_dyanmo_db.rs
