[package]
name = "dynamodb_lock"
description = "Distributed lock backed by Dynamodb"
version = "0.6.1"
authors = [
    "Mykhailo Osypov <mykhailo.osypov@gmail.com>",
    "R Tyler Croy <rtyler@brokenco.de>",
]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/delta-incubator/dynamodb-lock-rs"

[dependencies]
async-trait = "0.1"
thiserror = "1"
log = "0"
uuid = { version = "1.2", features = ["serde", "v4"] }

# Waiting on fix for regression in 0.48:
# https://github.com/rusoto/rusoto/issues/1980
rusoto_core = { version = "0.47", default-features = false }
rusoto_dynamodb = { version = "0.47", default-features = false }
rusoto_credential = { version = "0.47", default-features = false, optional = true}
rusoto_sts = { version ="0.47", default-features = false, optional = true }
maplit = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "io-util"] }

[dev-dependencies]
mockall = "0.11.4"
pretty_env_logger = "0.5"

[features]
default = ["rustls"]
sts = ["rusoto_sts",
        "rusoto_credential"]
native-tls = ["rusoto_core/native-tls", "rusoto_dynamodb/native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_dynamodb/rustls"]
